--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\SpawnTree.cs" />
      <Compile Include="Assets\Scripts\SpawnerBullet.cs" />
      <Compile Include="Assets\Scripts\Strating.cs" />
+     <Compile Include="Assets\simpleMotor.cs" />
      <None Include="Assets\Shaders\Vegetation.shader" />
      <None Include="Assets\Shaders\VertexAnimation.shader" />
      <None Include="Assets\Shaders\Refraction.shader" />
@@ -64,17 +65,11 @@
      <None Include="Assets\Shaders\Tiles.shader" />
      <None Include="Assets\Shaders\PixelRotator.shader" />
      <None Include="Assets\Shaders\CustomLighting.shader" />
- <Reference Include="UnityEngine.Advertisements">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
- </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Analytics">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="Mono.Cecil">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/Mono.Cecil.dll</HintPath>
